fixed last margins & alignment

--- a/izran-project/docs/story.css
+++ b/izran-project/docs/story.css
@@ -13,12 +13,14 @@ main{
     padding-bottom: 20vh;
 }
 #slide{
+  margin: auto;
+  width: 90%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 #story{
-    width: 70%;
+    width: 90%;
     margin: auto;
     padding-top: 5vh;
 }
