--- a/izran-project/docs/userstory.css
+++ b/izran-project/docs/userstory.css
@@ -13,7 +13,7 @@
 }
 
 #story{
-    width: 80%;
+    width: 90%;
     margin: auto;
     padding-top: 5vh;
 }
@@ -22,11 +22,11 @@
 h1{
     margin-bottom: 0;
     margin-top: 0;
-    text-align: center;
+    /* text-align: center; */
 }
 
 h2{
-    text-align: center;
+    /* text-align: center; */
 }
 
 #button{
@@ -58,7 +58,8 @@ audio{
 
 form {
     font-family: "neue_machinaultrabold";
-    margin: 2.5rem;
+    margin: auto;
+    width: 90%;
 }
 
 input{
